# packedbits

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.sh  runme.sh
_codeql_build_dir/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  compile_commands.json
_codeql_build_dir/apps/: CTestTestfile.cmake  Makefile  cmake_install.cmake  packedbits  unittest  unittest[1]_include.cmake  unittest[1]_tests.cmake
_codeql_build_dir/src/: CTestTestfile.cmake  Makefile  cmake_install.cmake
apps/: CMakeLists.txt  main.cpp  unittest_dummy.cpp
include/: PackedBitChain.h  common.h
src/: CMakeLists.txt
